# randomized-condorcet-voting-system

./: .gitignore  README.md  Randomized-Condorcet-Voting-System.ipynb  pyproject.toml  requirements.txt
.ipynb_checkpoints/: Randomized-Condorcet-Voting-System-checkpoint.ipynb
rcvs/: election.py  test.py  test_main.py
src/condorcet/: __init__.py  election.py  types.py  visualization.py
tests/: conftest.py  test_main.py
