[project]
name = "randomized-condorcet-voting-system"
version = "0.1.0"
description = "A library implementing a randomized Condorcet voting system with popularity-based elections and D3.js graph visualizations."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
"Programming Language :: Python :: 3",
"Operating System :: OS Independent",
]
dependencies = [
"numpy>=1.26",
"pandas>=2.2",
"scipy>=1.13",
"toolz>=0.12",
"tqdm>=4.66",
"jinja2>=3.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = [
"pytest",
"pytest-cov",
"black",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v -rsxX -l --tb=short --strict --cov=src -p no:warnings"
xfail_strict = true
markers = [
"tmp: Temporary",
"optional: Optional",
]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
select = ["E", "F", "I"]
ignore = ["E501", "I001"]

[tool.pyright]
include = ["src"]

[tool.flake8]
ignore = ["E501", "W503"]
count = true

[tool.coverage.run]
omit = [
"src/condorcet/visualization.py",
]

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
